# ELF2-Lab-Management-System

./: LICENSE  README.md
AI模块代码/Deepseek/Flask部署部分/: Deepseek_flask_server.py
AI模块代码/Deepseek/LORA微调部分/: Lora_Train.py  intergration.py  test.py
AI模块代码/Whisper/: whisper_flask.py
AI模块代码/YOLO/推理代码/: func.py  main.py  rknnpool.py
AI模块代码/YOLO/训练代码/: convert.py  train.py
UI模块代码/LVGL/: Makefile  lv_conf.h
UI模块代码/LVGL/includes/: bettery.h  canvas_display.h  fan_animation.h  id_vertify.h  light.h  manage_system.h  mqtt_connect.h  mqtt_data.h  ui_safe_update.h  weather_chart.h
UI模块代码/LVGL/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
UI模块代码/LVGL/ui/fonts/: ui_font_Fnot9.c  ui_font_Font10.c  ui_font_Font11.c  ui_font_Font12.c  ui_font_Font13.c  ui_font_Font14.c  ui_font_Font15.c  ui_font_Font16.c  ui_font_Font17.c  ui_font_Font2.c  ui_font_Font3.c  ui_font_Font4.c  ui_font_Font5.c  ui_font_Font6.c  ui_font_Font7.c  ui_font_Font8.c
UI模块代码/LVGL/ui/images/: ui_img_1005151649.c  ui_img_1113134515.c  ui_img_1152878764.c  ui_img_119155942.c  ui_img_1210169952.c  ui_img_1269858994.c  ui_img_1271700976.c  ui_img_1462846121.c  ui_img_1567896638.c  ui_img_1620289977.c  ui_img_1630681091.c  ui_img_1636984869.c  ui_img_1741439431.c  ui_img_1947152321.c  ui_img_2026056291.c  ui_img_2124969408.c  ui_img_2147162729.c  ui_img_255534165.c  ui_img_486395812.c  ui_img_545021016.c  ui_img_610600012.c  ui_img_696992780.c  ui_img_781516624.c  ui_img_877801452.c  ui_img_8836358.c  ui_img_944254084.c  ui_img_b401_png.c  ui_img_b402_png.c  ui_img_b403_png.c  ui_img_b404_png.c  ui_img_b405_png.c  ui_img_charge_green_png.c  ui_img_cpu_png.c  ui_img_emmc_png.c  ui_img_fan_png.c  ui_img_gas_png.c  ui_img_id_card_png.c  ui_img_lightning_png.c  ui_img_npu_png.c  ui_img_pan_png.c  (+4 more)
UI模块代码/LVGL/ui/screens/: ui_Screen1.c  ui_Screen1.h
前端Web代码/: app.py  dashboard.html  index.html  login.css  login.js  script.js  style.css  styles.css
后端模块代码/: Emerge.py  GPIO_Control.py  Network_Check.py  Scaner.py  Sensor_Data_Read.py  elf2-3588-common.dtsi
(+11 files in other folders)
