SET(SOURCES screens/ui_Screen1.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/ui_img_877801452.c
    images/ui_img_wifi1_png.c
    images/ui_img_wifi_png.c
    images/ui_img_1152878764.c
    images/ui_img_uncharge_png.c
    images/ui_img_charge_green_png.c
    images/ui_img_lightning_png.c
    images/ui_img_1269858994.c
    images/ui_img_781516624.c
    images/ui_img_944254084.c
    images/ui_img_1947152321.c
    images/ui_img_2124969408.c
    images/ui_img_1741439431.c
    images/ui_img_119155942.c
    images/ui_img_2147162729.c
    images/ui_img_pipline_png.c
    images/ui_img_id_card_png.c
    images/ui_img_8836358.c
    images/ui_img_1113134515.c
    images/ui_img_dark_png.c
    images/ui_img_b401_png.c
    images/ui_img_b402_png.c
    images/ui_img_b403_png.c
    images/ui_img_b404_png.c
    images/ui_img_fan_png.c
    images/ui_img_b405_png.c
    images/ui_img_digit_png.c
    images/ui_img_1210169952.c
    images/ui_img_1620289977.c
    images/ui_img_1630681091.c
    images/ui_img_1462846121.c
    images/ui_img_1567896638.c
    images/ui_img_545021016.c
    images/ui_img_486395812.c
    images/ui_img_696992780.c
    images/ui_img_pan_png.c
    images/ui_img_gas_png.c
    images/ui_img_cpu_png.c
    images/ui_img_1636984869.c
    images/ui_img_610600012.c
    images/ui_img_npu_png.c
    images/ui_img_emmc_png.c
    images/ui_img_255534165.c
    images/ui_img_1005151649.c
    images/ui_img_2026056291.c
    images/ui_img_1271700976.c
    fonts/ui_font_Fnot9.c
    fonts/ui_font_Font10.c
    fonts/ui_font_Font11.c
    fonts/ui_font_Font12.c
    fonts/ui_font_Font13.c
    fonts/ui_font_Font14.c
    fonts/ui_font_Font15.c
    fonts/ui_font_Font16.c
    fonts/ui_font_Font17.c
    fonts/ui_font_Font2.c
    fonts/ui_font_Font3.c
    fonts/ui_font_Font4.c
    fonts/ui_font_Font5.c
    fonts/ui_font_Font6.c
    fonts/ui_font_Font7.c
    fonts/ui_font_Font8.c)

add_library(ui ${SOURCES})
